--- a/app/views/shared/_header.erb
+++ b/app/views/shared/_header.erb
@@ -1,16 +1,14 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
+    <%= link_to '安藤護ポートフォリオ', "root_path", class:"portfolio-title" %>
     <form class="search-form" action="#">
       <input class='input-box' placeholder='キーワードから探す'>
       <button class="search-button">
         <%= image_tag "search.png", class:"search-icon" %>
       </button>
     </form>
-  </div>
-  <div class='nav'>
-    <ul class='lists-left'>
+    <ul class='lists-right'>
       <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
       <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
     </ul>
