フッターとカラーの修正

--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -11,7 +11,7 @@ body {
   padding: 2vh 10vw;
   display: flex;
   flex-direction: column;
-  background-color: #356bb1;
+  background-color: #39a0c9;
 }
 
 .search-bar-contents {
