トップページタイトル、画像挿入

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,10 @@
 <%= render "shared/header" %>
 
-<h1>安藤護ポートフォリオ</h1>
+<div class="top-page">
+  <div class="title">
+    <p>飲食人からエンジニアへ</p>
+    <p>安藤護ポートフォリオ</p>
+  </div>
+</div>
 
 <%= render "shared/footer" %>
