トップページにクリエンテ表示

--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -10,3 +10,11 @@
   font-size: 60px;
   padding: 5vh 15vw;
 }
+
+.product1{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+
+}
