--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -1,7 +1,7 @@
 body{
   min-height: 100vh;
   position: relative;
-  padding-bottom: 25px;
+  // padding-bottom: 25px;
   box-sizing: border-box;
 }
 
