--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,6 +5,17 @@
     <p>飲食人からエンジニアへ</p>
     <p>安藤護ポートフォリオ</p>
   </div>
+
+  <div class="products">
+    <div class="product1">
+      <%= link_to 'https://github.com/mamoru-ando/customer_info/blob/master/README.md' do %>
+        <%= image_tag('Cliente-logo.png') %><br>
+        お客様の名前が思い出せなくても大丈夫！<br>
+        外見の特徴から検索できる顧客管理アプリ<br>
+        クリエンテ<br>
+      <% end %>
+    </div>
+  </div>
 </div>
 
 <%= render "shared/footer" %>
