--- a/app/assets/stylesheets/shared/footer.css
+++ b/app/assets/stylesheets/shared/footer.css
@@ -1,9 +1,3 @@
-body{
-  min-height: 100vh;
-  position: relative;
-  // padding-bottom: 25px;
-  box-sizing: border-box;
-}
 
 footer {
   width: 100vw;
@@ -11,4 +5,7 @@ footer {
   background-color: #39a0c9;
   position: absolute;
   bottom: 0;
+  text-align: center;
+  color: white;
+  font-size: 15px;
 }
