--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -13,6 +13,12 @@
   padding: 3vh 15vw;
 }
 
+.profile {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+
 .products-title {
   font-size: 30px;
   text-align: center;
