--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,18 @@
     <p>安藤護ポートフォリオ</p>
   </div>
 
-  <div class="products-title">製作物一覧</div>
+  <div class="profile">
+    <h1 class="prolife-title">自己紹介</h1>
+    <div class="profile-article">
+    はじめまして、ご覧いただきありがとうございます。<br>
+    神奈川県在住の安藤護と申します。<br>
+    飲食業に11年ほど従事していましたが、家業の手伝いと新型コロナウイルスの影響をきっかけに、<br>
+    2020年11月にプログラミングスクールを受講してIT分野への転職活動中です。<br>
+    現在はITパスポートの学習とRubyをメインに学習しております。<br>
+    </div>
+  </div>
+
+  <h1 class="products-title">製作物一覧</h1>
   <div class="products">
     <div class="product1">
       <%= link_to 'https://github.com/mamoru-ando/customer_info/blob/master/README.md' do %>
