アプリ紹介情報更新

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -26,6 +26,9 @@
         外見の特徴から検索できる顧客管理アプリ<br>
         クリエンテ<br>
       <% end %>
+      このアプリは接客を行っている時によく遭遇した<br>
+      「顔は覚えているのに、名前が思い出せない！」<br>
+      を解決するために作成しました。
     </div>
   </div>
   <div class="push"></div>
