トップページ編集

--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -22,7 +22,8 @@
 .products-title {
   font-size: 30px;
   text-align: center;
-  margin: 15px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .products {
