--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,8 +2,10 @@
   <%= render "shared/header" %>
 
   <div class="title">
-    <p>飲食人からエンジニアへ</p>
-    <p>安藤護ポートフォリオ</p>
+    <p class="title-text">
+      飲食人からエンジニアへ</p>
+    <p class="title-text">
+      安藤護ポートフォリオ</p>
   </div>
 
   <div class="profile">
