リンク先の修正とログイン情報

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,7 +22,7 @@
   <h1 class="products-title">製作物一覧</h1>
   <div class="products">
     <div class="product1">
-      <%= link_to 'https://github.com/mamoru-ando/customer_info/blob/master/README.md' do %>
+      <%= link_to 'https://cliente-customer-info.herokuapp.com/' do %>
         <%= image_tag('Cliente-logo.png') %><br>
         お客様の名前が思い出せなくても大丈夫！<br>
         外見の特徴から検索できる顧客管理アプリ<br>
@@ -30,7 +30,10 @@
       <% end %>
       このアプリは接客を行っている時によく遭遇した<br>
       「顔は覚えているのに、名前が思い出せない！」<br>
-      を解決するために作成しました。
+      を解決するために作成しました。<br>
+      <%= link_to 'READMEはこちら', 'https://github.com/mamoru-ando/customer_info/blob/master/README.md' %><br>
+      テストID：test2@test<br>
+      テストPASS：a222222
     </div>
   </div>
   <div class="push"></div>
