--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,9 +14,9 @@
     はじめまして、ご覧いただきありがとうございます。<br>
     神奈川県在住の安藤護と申します。<br>
     飲食業に11年ほど従事していましたが、家業の手伝いと新型コロナウイルスの影響をきっかけに、<br>
-    2020年11月にプログラミングスクールを受講してIT分野への転職活動中です。<br>
+    2020年11月にプログラミングスクールを受講して転職活動中です。<br>
     現在はITパスポートの学習とRubyをメインに学習しております。<br>
-    このページもRubyを使用して作成しています。
+    このページもRuby on Railsを使用して作成しています。
     </div>
   </div>
 
