--- a/app/views/shared/_header.erb
+++ b/app/views/shared/_header.erb
@@ -1,7 +1,7 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to '安藤護ポートフォリオ', "root_path", class:"portfolio-title" %>
+    <%= link_to '安藤護ポートフォリオ', "#", class:"portfolio-title" %>
     <form class="search-form" action="#">
       <input class='input-box' placeholder='キーワードから探す'>
       <button class="search-button">
