--- a/app/views/shared/_footer.erb
+++ b/app/views/shared/_footer.erb
@@ -1,3 +1,3 @@
-<footer class="footer bg-info">
-    ©️ ando mamoru
+<footer class="footer fixed-bottom">
+    <p class="text-white pt-1 text-center">©️ ando mamoru</p>
 </footer>
