--- a/app/views/shared/_header.erb
+++ b/app/views/shared/_header.erb
@@ -1,16 +1,16 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
-<header class='top-page-header'>
-  <div class='search-bar-contents'>
-    <%= link_to '安藤護ポートフォリオ', "#", class:"portfolio-title" %>
-    <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
-      <button class="search-button">
-        <%= image_tag "search.png", class:"search-icon" %>
-      </button>
-    </form>
-    <ul class='lists-right'>
-      <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
-      <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
-    </ul>
-  </div>
-</header>
+  <nav class="navbar sticky-top text-white px-4">
+    <%# <div class="container-fluid"> %>
+      <a class="navbar-brand h1" href="#">安藤護ポートフォリオ</a>
+      <form class="search-form" action="#">
+        <input class='input-box' placeholder='キーワードから探す'>
+        <button class="search-button">
+          <%= image_tag "search.png", class:"search-icon" %>
+        </button>
+      </form>
+      <ul class='lists-right'>
+        <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
+        <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
+      </ul>
+    <%# </div> %>
+  </nav>
