タイトル修正

--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -5,12 +5,12 @@
 .title {
   background-image: image-url('photo-leaf.jpeg');
   background-position: top center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  // background-size: cover;
+  // background-repeat: no-repeat;
   height: 300px;
-  color: white;
+  // color: white;
   font-size: 55px;
-  padding: 3vh 15vw;
+  // padding: 3vh 15vw;
 }
 
 .title-text {
