--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,9 @@
 <%= render "shared/header" %>
-  <div class="container">
+  <div class="container-fluid">
 
-    <div class="title">
-      <p class="title-text">
-        飲食人からエンジニアへ</p>
-      <p class="title-text">
-        安藤護ポートフォリオ</p>
+    <div class="row title p-5 text-white">
+      <p>飲食人からエンジニアへ</p>
+      <p>安藤護ポートフォリオ</p>
     </div>
 
     <div class="profile">
