表示はば修正

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
       <p>安藤護ポートフォリオ</p>
     </div>
 
-    <div class="profile">
+    <div class="row profile mt-5">
       <h1 class="prolife-title">自己紹介</h1>
       <div class="profile-article">
       はじめまして、ご覧いただきありがとうございます！<br>
