--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -25,10 +25,10 @@
 
 
 .products-title {
-  font-size: 30px;
+  // font-size: 30px;
   text-align: center;
-  margin-top: 40px;
-  margin-bottom: 25px;
+  // margin-top: 40px;
+  // margin-bottom: 25px;
 }
 
 .products {
