タイトル表示編集

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/header" %>
   <div class="container-fluid">
 
-    <div class="row title p-5 text-white">
+    <div class="row title pt-3 text-white">
       <p>飲食人からエンジニアへ</p>
       <p>安藤護ポートフォリオ</p>
     </div>
