--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,8 @@
       神奈川県在住の安藤護と申します。<br>
       飲食業に11年ほど従事していましたが、家業の手伝いと新型コロナウイルスの影響をきっかけに、<br>
       2020年11月にプログラミングスクールを受講して転職活動中です。<br>
-      現在はITパスポートの学習とRubyをメインに学習しております。<br>
+      2021年4月にITパスポートを受験して合格しました。<br>
+      現在はRubyをメインに学習しております。<br>
       このページもRuby on Railsを使用して作成しました。
       </div>
     </div>
