表示幅変更

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
       <p>安藤護ポートフォリオ</p>
     </div>
 
-    <div class="row profile mt-5">
+    <div class="row profile mt-5 mb-3">
       <h1 class="prolife-title">自己紹介</h1>
       <div class="profile-article">
       はじめまして、ご覧いただきありがとうございます！<br>
@@ -19,8 +19,8 @@
       </div>
     </div>
 
-    <div class="row mt-5">
-      <h1 class="products-title">製作物一覧</h1>
+    <div class="row mt-5 mb-3">
+      <h1 class="products-title mb-3 mt-5">製作物一覧</h1>
       <div class="products mt-3">
         <div class="product1">
           <%= link_to 'https://cliente-customer-info.herokuapp.com/' do %>
